# prismerge

./: Cargo.toml  LICENSE  README.md
.github/workflows/: test.yml
js/: .gitignore  index.ts  jest.config.ts  package-lock.json  package.json  tsconfig.json
js/fixtures/: schema.prisma
js/src/: cli.ts  connection.ts  data.ts  insert_manager.ts  merge.ts  option.ts  prisma.ts  progress.ts  result.ts
js/src/__tests__/: prismerge.test.ts  schema.ts
src/: data.rs  insert_manager.rs  lib.rs  prisma_parser.rs  progress.rs  utils.rs
