[package]
name = "prismerge"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "~4.5.20", features = ["derive"] }
indicatif = "~0.17.8"
rusqlite = "~0.32.1"
tap = "~1.0.1"
topological-sort = "~0.2.2"
tree-sitter = "~0.20.0"
tree-sitter-prisma-io = { version = "~1.4.0" }
uuid = { version = "~1.11.0", features = ["v4"] }

[build-dependencies]
cc="*"

[[bin]]
name = "prismerge"
path = "src/bin/prismerge.rs"
